# rust-kanren

./: Cargo.toml  README.md
examples/: ch8.rs  cheryls_birthday.rs  life.rs  nqueens.rs  quine.rs  sendmoremoney.rs  sudoku.rs  zebra.rs
examples/sudoku-puzzles/: empty  hard  medium
src/: builtins.rs  constraints.rs  finitedomain.rs  iter.rs  lib.rs  list.rs  macros.rs  tailiter.rs
src/core/: disequal.rs  get_values.rs  mod.rs  reify.rs  vars.rs
tests/: bench.rs  tests.rs
